--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <p class="max-w-2xl mx-auto">
         Ich bin ein erfahrener Fullstack-Webentwickler mit einer Leidenschaft für Microservices und komponentenbasierte Frontends. Meine Arbeit zeichnet sich durch Innovationsfreude und Teamgeist aus.
         <br><br>
-        Dank meiner umfangreichen Frontend-Expertise in TypeScript, VueJS und Preact und meiner langjährigen Backenderfahrung in NodeJS, PHP, und Golang sowie meinem Know-how im Aufbau von Infrastruktur mit AWS, Docker, Kubernetes und GitLab CI/CD, bin ich vielseitig einsetzbar.
+        Dank meiner umfangreichen Frontend-Expertise in TypeScript, VueJS und Preact und meiner langjährigen Backenderfahrung in NodeJS, PHP und Golang sowie meinem Know-how im Aufbau von Infrastruktur mit AWS, Docker, Kubernetes und GitLab CI/CD, bin ich vielseitig einsetzbar.
         <br><br>
         Mein Anspruch an qualitativ hochwertige Arbeit zeigt sich in meinen Methoden: regelmäßige Code Reviews, Anwendung von Clean Code-Prinzipien, durchdachte Architektur und kontinuierliches Refactoring sind für mich selbstverständlich.
 
