task: add favicon and change layout

--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gregory Mahnke</title>
+  <title>reg's tab 👋</title>
   <!-- <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"> -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 </head>
-<body class="bg-gray-100 text-gray-900 font-serif flex flex-col h-screen justify-between">
+
+<body class="bg-gray-100 text-gray-900 font-serif flex flex-col h-screen justify-between" style="font-size: 16px;">
 
   <!-- Header Section -->
   <header class="bg-white">
     <div class="container mx-auto p-6 flex justify-between items-center">
       <nav>
         <ul class="flex space-x-4">
-          <li><a href="https://www.linkedin.com/in/gregory-mahnke-382a042b7/" target="_blank" class="hover:text-blue-400">LinkedIn</a></li>
+          <li><a href="https://www.linkedin.com/in/gregory-mahnke-382a042b7/" target="_blank"
+              class="hover:text-blue-400">LinkedIn</a></li>
           <li><a href="https://github.com/grexen" target="_blank" class="hover:text-blue-400">GitHub</a></li>
           <li><a href="mailto:mail@gregorymahnke.dev" class="hover:text-blue-400">Mail</a></li>
         </ul>
@@ -22,32 +28,43 @@
     </div>
   </header>
 
+
   <!-- About Section -->
   <section id="about" class="py-20 bg-gray-50">
-    <div class="container mx-auto text-center">
-      <img src="./DevmVHcw.jpeg" class="mx-auto rounded-full w-32 mb-6"/>
-      <h2 class="text-4xl font-semibold font-sans mb-6">Gregory Mahnke</h2>
-      <p class="max-w-2xl font-semibold font-sans mx-auto text-lg mb-3">Fullstack-Webentwickler aus Hannover</p>
-      <p class="max-w-2xl mx-auto">
-        Ich bin ein erfahrener Fullstack-Webentwickler mit einer Leidenschaft für Microservices und komponentenbasierte Frontends. Meine Arbeit zeichnet sich durch Innovationsfreude und Teamgeist aus.
-        <br><br>
-        Dank meiner umfangreichen Frontend-Expertise in TypeScript, VueJS und Preact und meiner langjährigen Backenderfahrung in NodeJS, PHP und Golang sowie meinem Know-how im Aufbau von Infrastruktur mit AWS, Docker, Kubernetes und GitLab CI/CD, bin ich vielseitig einsetzbar.
-        <br><br>
-        Mein Anspruch an qualitativ hochwertige Arbeit zeigt sich in meinen Methoden: regelmäßige Code Reviews, Anwendung von Clean Code-Prinzipien, durchdachte Architektur und kontinuierliches Refactoring sind für mich selbstverständlich.
+    <div class="container mx-auto text-center px-2">
+      <img src="./6066238.jfif" class="mx-auto rounded-full w-32 mb-6" />
+      <h2 class="text-4xl font-semibold font-sans mb-6">[greg]</h2>
 
+      <div class="text-gray-700 max-w-3xl mx-auto space-x-2 leading-8 mb-6">
+        <span class="whitespace-nowrap">💻 Webentwicklung seit 2015</span>
+        <span>|</span>
+        <span class="whitespace-nowrap">⌨️ TypeScript, PHP, Go</span>
+        <span>|</span>
+        <span class="whitespace-nowrap">☁️ AWS, Docker, Kubernetes</span>
+        <span>|</span>
+        <span class="whitespace-nowrap">🧹 Clean Code Prinzipien</span>
+        <span>|</span>
+        <span class="whitespace-nowrap">🔄 Refactoring</span>
+        <span>|</span>
+        <span class="whitespace-nowrap">ICQ 96626725</span>
+      </div>
+      
+      <hr class="mb-6">
 
-
-
-      </p>
+      <blockquote class="text-gray-700 max-w-3xl mx-auto">
+        <p class="italic mb-2">„Zu sehen, was man direkt vor der Nase hat, bedarf eines ständigen Kampfes.“</p>
+        <cite class="block text-center">— George Orwell</cite>
+      </blockquote>
     </div>
   </section>
 
   <!-- Footer -->
   <footer class="bg-white py-6">
     <div class="container mx-auto text-center">
-      <p>&copy; 2024 Gregory Mahnke. Alle Rechte vorbehalten.</p>
+      <p>&copy; Gregory Mahnke 2024</p>
     </div>
   </footer>
 
 </body>
+
 </html>
