task: fix hr width

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <section id="about" class="py-20 bg-gray-50">
     <div class="container mx-auto text-center px-2">
       <img src="./6066238.jfif" class="mx-auto rounded-full w-32 mb-6" />
-      <h2 class="text-4xl font-semibold font-sans mb-6">[greg]</h2>
+      <h2 class="text-4xl font-semibold font-sans mb-6">[~/greg]</h2>
 
       <div class="text-gray-700 max-w-3xl mx-auto space-x-2 leading-8 mb-6">
         <span class="whitespace-nowrap">💻 Webentwicklung seit 2015</span>
@@ -48,8 +48,8 @@
         <span>|</span>
         <span class="whitespace-nowrap">ICQ 96626725</span>
       </div>
-      
-      <hr class="mb-6">
+
+      <hr class="mb-6 max-w-2xl px2 mx-auto ">
 
       <blockquote class="text-gray-700 max-w-3xl mx-auto">
         <p class="italic mb-2">„Zu sehen, was man direkt vor der Nase hat, bedarf eines ständigen Kampfes.“</p>
