--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>reg's tab 👋</title>
+  <title>Greg's homepage</title>
   <!-- <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"> -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -33,14 +33,14 @@
   <section id="about" class="py-20 bg-gray-50">
     <div class="container mx-auto text-center px-2">
       <img src="./6066238.jfif" class="mx-auto rounded-full w-32 mb-6" />
-      <h2 class="text-4xl font-semibold font-sans mb-6">[~/greg]</h2>
+      <h2 class="text-4xl font-semibold font-sans mb-6">Gregory Mahnke</h2>
 
       <div class="text-gray-700 max-w-3xl mx-auto space-x-2 leading-8 mb-6">
         <span class="whitespace-nowrap">💻 Webentwicklung seit 2015</span>
         <span>|</span>
         <span class="whitespace-nowrap">⌨️ TypeScript, PHP, Go</span>
         <span>|</span>
-        <span class="whitespace-nowrap">☁️ AWS, Docker, Kubernetes</span>
+        <span class="whitespace-nowrap">☁️ Docker, Kubernetes, Gitlab CI/CD</span>
         <span>|</span>
         <span class="whitespace-nowrap">🧹 Clean Code Prinzipien</span>
         <span>|</span>
@@ -61,7 +61,7 @@
   <!-- Footer -->
   <footer class="bg-white py-6">
     <div class="container mx-auto text-center">
-      <p>&copy; Gregory Mahnke 2024</p>
+      <p>&copy; Gregory Mahnke 2025</p>
     </div>
   </footer>
 
